# aegis-core

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  cognition.md  host_activity.md  lifecycle.md  memory.md  observer.md  principles.md  steward.md  uart_protocol.md
dogfood/: observations.md
firmware/heartbeat/: brain_reverie.py  privacy_state.py  uart_link.py
firmware/heartbeat/tests/: test_brain_reverie.py  test_privacy_state.py  test_uart_framing.py
hardware/: bom.md  inventory.md
hardware/shell/: combine_for_chitubox.py  generate_shell.py  make_parts_guide_pdf.py  open_bottom_plate.py  open_in_blender.py  open_session1.py  open_session2.py  open_small_parts.py  parameters.py  render_parts.py
ops/launchd/: com.aegiscore.dogfood.plist
ops/natsconfig/: nats.conf
ops/systemd/: aegis-nats.service
rules/: intervention.yaml  schedule.yaml
src/aegis_core/: bus.py  cli.py
src/aegis_core/messages/: __init__.py  _base.py  memory_events.py  mind_events.py  mood_events.py  sense_events.py  state_events.py  voice_events.py
src/aegis_core/services/: _base.py  _stub.py
src/aegis_core/services/heartbeat/: __init__.py  service.py
src/aegis_core/services/keeper/: __init__.py  consolidation.py  service.py  theme_tokenizer.py
src/aegis_core/services/memory/: __init__.py  service.py  signature.py
src/aegis_core/services/mind/: __init__.py  claude_client.py  local_generator.py  mock_mind.py  redaction.py  router.py  service.py
src/aegis_core/services/mood/: __init__.py  inference.py  service.py
src/aegis_core/services/observer/: __init__.py  app.py  dogfood.py  ring_buffer.py  scheduler.py  service.py  snapshots.py
src/aegis_core/services/senses/: __init__.py  service.py
src/aegis_core/services/state/: __init__.py  machine.py  rules.py  service.py
src/aegis_core/services/steward/: __init__.py  attention.py  clock.py  decay.py  gate.py  recovery.py  rules.py  service.py  tone_classifier.py
src/aegis_core/services/voice/: __init__.py  backend.py  (+1 more)
src/aegis_core/storage/: _conn.py  events.py  interventions.py  moments.py  scar_tissue.py  schema.py  themes.py
tests/: conftest.py  test_bus.py  test_canonical_cycle.py  test_canonical_cycle_full.py  test_canonical_cycle_memory.py  test_canonical_cycle_observer.py  test_canonical_cycle_steward.py  test_cli_host_activity.py  test_cli_supervision.py  test_heartbeat_protocol.py  test_host_activity_capstone.py  test_host_activity_reader.py  test_host_activity_source.py  test_keeper_consolidation.py  test_keeper_periodic_loop.py  test_keeper_publishes_continuity.py  test_keeper_service.py  test_launchd_plist.py  test_memory_service.py  test_memory_signature.py  test_messages.py  test_messages_continuity_candidate.py  test_messages_mood_changed.py  test_messages_utterance_proposal.py  test_messages_voice_speak.py  test_mind_claude_stub.py  test_mind_local_generator.py  test_mind_redaction.py  test_mind_router.py  test_mind_service.py  test_mock_mind.py  test_mock_sources.py  test_mood_inference.py  test_mood_service.py  test_observer_app_now.py  test_observer_app_timeline.py  test_observer_dogfood.py  test_observer_healthz.py  test_observer_index_html.py  test_observer_ring_buffer.py  (+27 more)
tests/fixtures/camera_frames/: frame_001.json  frame_002.json  frame_003.json
tests/fixtures/traces/: canonical_cycle.json
(+11 files in other folders)
