[project]
name = "aegis-core"
version = "0.1.0"
description = "The Desk Companion — ambient cognitive presence."
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "York Sims" }
]
dependencies = [
  "nats-py>=2.7.0",
  "pydantic>=2.7.0",
  "click>=8.1.7",
  "structlog>=24.1.0",
  "anyio>=4.3.0",
  "pyserial>=3.5",
  "PyYAML>=6.0.1",
]

[project.scripts]
aegis-core = "aegis_core.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-timeout>=2.3.0",
  "ruff>=0.4.0",
  "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --tb=short"
testpaths = ["tests", "firmware/heartbeat/tests"]
timeout = 30

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # allow `assert` in tests
