[project]
name = "aegis-core"
version = "0.1.0"
description = "The Desk Companion — ambient cognitive presence."
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "York Sims" }
]
dependencies = [
  "nats-py>=2.7.0",
  "pydantic>=2.7.0",
  "click>=8.1.7",
  "structlog>=24.1.0",
  "anyio>=4.3.0",
  "pyserial>=3.5",
  "PyYAML>=6.0.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "jinja2>=3.1.4",
  "pyobjc-framework-Quartz>=10.0 ; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa>=10.0 ; sys_platform == 'darwin'",
]

[project.scripts]
aegis-core = "aegis_core.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-timeout>=2.3.0",
  "ruff>=0.4.0",
  "Pillow>=10.0.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --tb=short"
testpaths = ["tests", "firmware/heartbeat/tests"]
timeout = 30

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = [
  "S101",  # assert is fine in tests
  "S108",  # local-first dev tool: memory DB and voice log default to /tmp, overridable via --db
  "S110",  # try/except/pass is intentional on best-effort teardown and flush paths
  "S603",  # the dev CLI launches a known local nats-server, never untrusted input
  "S607",  # nats-server and uv are resolved from PATH on purpose
]

[tool.ruff.lint.per-file-ignores]
# dev CLI: blocking startup work and a Ctrl-C wait loop are intentional
"src/aegis_core/cli.py" = ["ASYNC110", "ASYNC220", "ASYNC240"]
# StdoutBackend appends one line to a local dev log
"src/aegis_core/services/voice/backend.py" = ["ASYNC230"]
# test code conventions: imports after fixtures, throwaway locals, port-probe sockets
"tests/**" = ["E402", "E501", "E741", "F841", "RUF003", "ASYNC220"]
# Blender CAD scripts: run inside Blender, compact geometry style, bpy imported after setup
"hardware/**" = ["E402", "E501", "E702", "RUF003"]
